fixed spacing in bookshelf, added captions to pet pic modal

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
 /* silkscreen */
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
+/* montserrat */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+/* varela */
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+/* jost */
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+.montserrat {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+.varela-regular {
+  font-family: "Varela", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.jost {
+  font-family: "Jost", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
 
 .centered {
   display: flex;
